fix scrollbar position issue

--- a/zul/src/archive/web/zul/less/norm.less
+++ b/zul/src/archive/web/zul/less/norm.less
@@ -494,7 +494,7 @@ span.z-upload input {
 }
 //scrollbar
 .z-scrollbar {
-	position: absolute;
+	position: fixed;
 	opacity: 0;
 	&-embed {
 		background: lighten(@scrollbarBackgroundColor, 5%);
@@ -502,8 +502,6 @@ span.z-upload input {
 	}
 	//vertical
 	&-vertical {
-		top: 0;
-		right: 0;
 		width: @baseIconWidth;
 		.z-scrollbar-wrapper {
 			position: absolute;
@@ -567,8 +565,6 @@ span.z-upload input {
 	}
 	//horizontal
 	&-horizontal {
-		bottom: 0;
-		left: 0;
 		height: @baseIconHeight;
 		.z-scrollbar-wrapper {
 			position: absolute;
